# giraffeduck

./: .eslintrc.cjs  .gitignore  .tsbuildinfo  Cargo.toml  Dockerfile  README.md  docker-compose.yml  eleventy.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: main.yml
public/: beemovie.txt  humans.txt
public/resources/: RichEmbed.js  hljs.css  hljs.min.css  main.css  parser.js
public/resources/icons/: browserconfig.xml  manifest.json
public/resources/styles/: hack.css  styles.css
src/: app.controller.ts  app.module.ts  bots.md  code.md  discord.rs  index.njk  main.rs  main.ts  test.ts
src/_includes/macros/: cards.njk
src/_includes/templates/: base.njk  footer.njk  nav.njk  page.njk
src/api/: api.module.ts  attachments.rs  bee.rs  fox.rs  log.rs  mod.rs
src/api/attachments/: attachments.controller.ts  attachments.module.ts  attachments.service.ts
src/api/bee/: bee.controller.ts  bee.module.ts  bee.service.ts
src/api/fox/: fox.controller.ts  fox.module.ts  fox.service.ts
src/api/log/: SizedMap.ts  log.controller.ts  log.module.ts  log.service.ts
src/bots/: bots.controller.ts  bots.service.ts
src/bots/interfaces/: bot.ts
src/docs/: docs.controller.ts  docs.module.ts
src/middleware/: HttpLoggerMiddleware.ts
src/utils/: files.ts  handlebars.ts  random.ts  request.ts
templates/: log_viewer.hbs
views/: about.hbs  code.hbs  contact.hbs  index.hbs
views/api/log/: viewer.hbs
views/bots/: index.hbs  smol_troll.hbs
views/docs/: bee.hbs  fox.hbs
views/partials/: footer.hbs  head.hbs  navbar.hbs  page_layout.hbs
(+4 files in other folders)
