[package]
name = "giraffeduck"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
handlebars = "6.3.2"
lazy_static = "1.5.0"
lru = "0.16.0"
minreq = { version = "2.14.0", features = ["https-rustls"] }
ntex = { version = "2.15.1", features = ["compress", "rustls", "tokio", "url"] }
ntex-files = "2.1.0"
rand = "0.9.2"
rustls = "0.23.31"
rustls-platform-verifier = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
url = "2.5.4"
